--- a/unit-1/1.07/5-click-box.html
+++ b/unit-1/1.07/5-click-box.html
@@ -1,33 +1,41 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <style>
-            html,body{
-                display: flex;
-                align-items:center;
-                justify-content: center;
-                height:100%;
-            }
-            div{
-                border: solid 1px black;
-                height:50px;
-                width:50px;
-                margin: 5px;
-            }
-        </style>
-    </head>
-	<body>
-		<div></div>
-		<div></div>
 
-		<script>
-		    var myColor = prompt("Pick a color!");
-		    
-		    function changeColor(){
-		        div.style.backgroundColor(myColor);
-		    }
-		    
-		    div.addEventListener("click", changeColor);
-		</script>
-	</body>
+<head>
+    <style>
+        html,
+        body {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+        }
+
+        div {
+            border: solid 1px black;
+            height: 50px;
+            width: 50px;
+            margin: 5px;
+        }
+    </style>
+</head>
+
+<body>
+    <div></div>
+    <div></div>
+
+    <script>
+        var myColor = prompt("Pick a color!");
+
+        function changeColor() {
+            this.style.backgroundColor = myColor;
+        }
+
+        var divs = document.getElementsByTagName("div");
+        for (var i = 0; i < divs.length; i++) {
+            divs[i].addEventListener("click", changeColor);
+        }
+    </script>
+</body>
+
 </html>
